fix menu z-index

--- a/src/app/mainmenu/mainmenu.component.scss
+++ b/src/app/mainmenu/mainmenu.component.scss
@@ -105,7 +105,7 @@
         height: 100vh;
         top: 0;
         left: 0;
-        z-index: 1000;
+        z-index: 1029;
         background-color: rgba(0,0,0,.5);
     }
     @include media-breakpoint-down(sm) {
